tests/ui/try_transmute_mut.msrv.stderr
error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
   --> $DIR/try_transmute_mut.rs:18:63
    |
18  |     let dst_not_try_from_bytes: Result<&mut NotZerocopy, _> = try_transmute_mut!(src);
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotZerocopy`
    |
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              bool
              char
              isize
              i8
              i16
              i32
              i64
              i128
            and 156 others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::try_transmute_mut`
   --> $WORKSPACE/src/util/macro_util.rs:815:14
    |
812 |     pub fn try_transmute_mut(self) -> Result<&'a mut Dst, ValidityError<&'a mut Src, Dst>>
    |            ----------------- required by a bound in this associated function
...
815 |         Dst: TryFromBytes + IntoBytes,
    |              ^^^^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::try_transmute_mut`
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: IntoBytes` is not satisfied
   --> $DIR/try_transmute_mut.rs:18:63
    |
18  |     let dst_not_try_from_bytes: Result<&mut NotZerocopy, _> = try_transmute_mut!(src);
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `NotZerocopy`
    |
    = note: Consider adding `#[derive(IntoBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `IntoBytes`:
              bool
              char
              isize
              i8
              i16
              i32
              i64
              i128
            and 69 others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::try_transmute_mut`
   --> $WORKSPACE/src/util/macro_util.rs:815:29
    |
812 |     pub fn try_transmute_mut(self) -> Result<&'a mut Dst, ValidityError<&'a mut Src, Dst>>
    |            ----------------- required by a bound in this associated function
...
815 |         Dst: TryFromBytes + IntoBytes,
    |                             ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::try_transmute_mut`
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
   --> $DIR/try_transmute_mut.rs:18:33
    |
18  |     let dst_not_try_from_bytes: Result<&mut NotZerocopy, _> = try_transmute_mut!(src);
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotZerocopy`
    |
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              bool
              char
              isize
              i8
              i16
              i32
              i64
              i128
            and 156 others
note: required by a bound in `ValidityError`
   --> $WORKSPACE/src/error.rs:588:45
    |
588 | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
   --> $DIR/try_transmute_mut.rs:18:63
    |
18  |     let dst_not_try_from_bytes: Result<&mut NotZerocopy, _> = try_transmute_mut!(src);
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotZerocopy`
    |
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              bool
              char
              isize
              i8
              i16
              i32
              i64
              i128
            and 156 others
note: required by a bound in `ValidityError`
   --> $WORKSPACE/src/error.rs:588:45
    |
588 | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `SrcA: FromBytes` is not satisfied
   --> $DIR/try_transmute_mut.rs:33:41
    |
33  |     let src_not_from_bytes: &mut DstA = try_transmute_mut!(&mut SrcA).unwrap();
    |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `SrcA`
    |
    = note: Consider adding `#[derive(FromBytes)]` to `SrcA`
    = help: the following other types implement trait `FromBytes`:
              isize
              i8
              i16
              i32
              i64
              i128
              usize
              u8
            and 80 others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::try_transmute_mut`
   --> $WORKSPACE/src/util/macro_util.rs:814:14
    |
812 |     pub fn try_transmute_mut(self) -> Result<&'a mut Dst, ValidityError<&'a mut Src, Dst>>
    |            ----------------- required by a bound in this associated function
813 |     where
814 |         Src: FromBytes + IntoBytes,
    |              ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::try_transmute_mut`
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DstA: IntoBytes` is not satisfied
   --> $DIR/try_transmute_mut.rs:33:41
    |
33  |     let src_not_from_bytes: &mut DstA = try_transmute_mut!(&mut SrcA).unwrap();
    |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `DstA`
    |
    = note: Consider adding `#[derive(IntoBytes)]` to `DstA`
    = help: the following other types implement trait `IntoBytes`:
              bool
              char
              isize
              i8
              i16
              i32
              i64
              i128
            and 69 others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::try_transmute_mut`
   --> $WORKSPACE/src/util/macro_util.rs:815:29
    |
812 |     pub fn try_transmute_mut(self) -> Result<&'a mut Dst, ValidityError<&'a mut Src, Dst>>
    |            ----------------- required by a bound in this associated function
...
815 |         Dst: TryFromBytes + IntoBytes,
    |                             ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::try_transmute_mut`
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `SrcB: IntoBytes` is not satisfied
   --> $DIR/try_transmute_mut.rs:46:41
    |
46  |     let src_not_from_bytes: &mut DstB = try_transmute_mut!(&mut SrcB).unwrap();
    |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `SrcB`
    |
    = note: Consider adding `#[derive(IntoBytes)]` to `SrcB`
    = help: the following other types implement trait `IntoBytes`:
              bool
              char
              isize
              i8
              i16
              i32
              i64
              i128
            and 69 others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::try_transmute_mut`
   --> $WORKSPACE/src/util/macro_util.rs:814:26
    |
812 |     pub fn try_transmute_mut(self) -> Result<&'a mut Dst, ValidityError<&'a mut Src, Dst>>
    |            ----------------- required by a bound in this associated function
813 |     where
814 |         Src: FromBytes + IntoBytes,
    |                          ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::try_transmute_mut`
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DstB: IntoBytes` is not satisfied
   --> $DIR/try_transmute_mut.rs:46:41
    |
46  |     let src_not_from_bytes: &mut DstB = try_transmute_mut!(&mut SrcB).unwrap();
    |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `DstB`
    |
    = note: Consider adding `#[derive(IntoBytes)]` to `DstB`
    = help: the following other types implement trait `IntoBytes`:
              bool
              char
              isize
              i8
              i16
              i32
              i64
              i128
            and 69 others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::try_transmute_mut`
   --> $WORKSPACE/src/util/macro_util.rs:815:29
    |
812 |     pub fn try_transmute_mut(self) -> Result<&'a mut Dst, ValidityError<&'a mut Src, Dst>>
    |            ----------------- required by a bound in this associated function
...
815 |         Dst: TryFromBytes + IntoBytes,
    |                             ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::try_transmute_mut`
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0277`.
